<resources>
    <string name="app_name">Thrive</string>
    <string name="title_today">Today</string>
    <string name="title_diary">Diary</string>
    <string name="title_plans">Plans</string>
    <string name="title_profile">Profile</string>
    <string name="title_sign_in">sign in</string>
    <string name="sign_in_Google">Google</string>
    <string name="sign_in_app">Sign in</string>
    <string name="sign_up_app">Sign up</string>
    <string name="today">Today</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="sample_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Phasellus sed porta tellus, id pretium nunc. Sed in leo metus.
        Vivamus laoreet purus ac justo dignissim, quis tincidunt tortor finibus.
        Donec et ante ligula. Pellentesque pulvinar a arcu sed varius.
        Sed orci felis, hendrerit nec ex varius, ultricies placerat neque. Ut.</string>


    <!-- Quote list -->
    <string name="quote1">“When you change your thoughts, remember to also change your world.”—Norman Vincent Peale</string>
</resources>